--- a/style.css
+++ b/style.css
@@ -3,15 +3,28 @@
     margin: 0;
 }
 
+body {
+    background-image: url(./images/imgtemp.png);
+    background: blue;
+    color: white;
+}
+
+/* body:hover {
+    background-color: red;
+} */
+
 .d {
     color: aquamarine;
 }
 
 .case {
     color: brown;
+    color: white;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    margin-bottom: 5vh;
+    margin-top: 5vh;
     justify-content: center;
     /* align-items: center; */
 }
@@ -19,6 +32,15 @@
 a {
     color: green;
     color: purple;
+    color: white;
+}
+
+h2 {
+    position: absolute;
+    /* top: 1vh; */
+    line-height: 195px;
+    margin-left: 2.5%;
+    font-size: 50px;
 }
 
 h2:hover {
@@ -35,3 +57,7 @@ img:hover {
     transition: 1s;
 }
 
+img {
+    width: 266px;
+    height: 195px;
+}
